2010-01-10 [holger]	0.3cvs3

	* src/clawsmailmodule.c
		Add accessor for main window ui manager

2010-01-10 [holger]	0.3cvs2

	* src/python_plugin.c
		Post-freeze string updates

2010-01-10 [holger]	0.3cvs1

	* src/nodetype.c
		Make Node a new-style class

2010-01-08 [paul]	0.3

	0.3 released

2010-01-08 [paul]	0.2cvs21

	* configure.ac
	* po/ca.po
	* po/cs.po
	* po/fi.po
	* po/hu.po
	* po/id.po
	* po/ja.po
	* po/nl.po
	* po/pt_BR.po
	* po/sk.po
		added by Miquel Oliete, David Vachulka, Tommi Pirinen, Pader Rezso,
		MSulchan Darmawan, kazken3, Marcel Pol, Frederico Goncalves Guimaraes,
		and Slavko

2010-01-05 [holger]	0.2cvs20

	* src/python_plugin.c
		Make sure standard script directories exist,
		and add a menu item to open the script root dir
		in the default file browser

2010-01-02 [holger]	0.2cvs19

	* src/foldertype.c
		Add accessor for identifier

2009-12-30 [holger]	0.2cvs18

	* src/composewindowtype.c
	* src/foldertype.c
	* src/foldertype.h
		Add access to "save message to" setting of compose window

2009-12-30 [holger]	0.2cvs17

	* src/composewindowtype.c
		Add accessor to account selection combo box

2009-12-30 [holger]	0.2cvs16

	* src/composewindowtype.c
		Allow setting of custom headers in compose window

2009-12-29 [holger]	0.2cvs15

	* src/composewindowtype.c
		Add accessor for headers set in the compose window

2009-12-22 [holger]	0.2cvs14

	* README
		Update documentation

2009-12-22 [holger]	0.2cvs13

	* src/composewindowtype.c
		Add possibility to manipulate the "From" entry of
		a compose window

2009-12-22 [holger]	0.2cvs12

	* src/python_plugin.c
		Add startup and shutdown scripts

2009-12-20 [holger]	0.2cvs11

	* README
	* src/python_plugin.c
		Rename auto/compose to auto/compose_any.
		Maybe there'll be an extension in the future
		to have separate scripts for fresh composing,
		reply, forward etc some day

2009-12-20 [holger]	0.2cvs10

	* src/composewindowtype.c
		Add accessor for subject
	* README
	* src/python_plugin.c